Collapse fix

--- a/app/assets/stylesheets/new.css
+++ b/app/assets/stylesheets/new.css
@@ -81,6 +81,7 @@ ul {
 
 .tt-input {
     background: #fff !important;
+    color: #000 !important;
 }
 
 .tt-suggestion {
